<resources>
    <string name="app_name">知乎日报</string>
    <string name="daily_psychology">日常心理学</string>
    <string name="user_recommendation_daily">用户推荐日报</string>
    <string name="movie_Daily">电影日报</string>
    <string name="do_not_be_bored">不许无聊</string>
    <string name="design_daily">设计日报</string>
    <string name="big_company_daily">大公司日报</string>
    <string name="financial_daily">财经日报</string>
    <string name="internet_security">互联网安全</string>
    <string name="start_game">开始游戏</string>
    <string name="music_daily">音乐日报</string>
    <string name="anime_daily">动漫日报</string>
    <string name="sports_daily">体育日报</string>
    <string name="login">请登录</string>
    <string name="offline_download">离线下载</string>
    <string name="my_collection">我的收藏</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting_options">设置选项</string>
    <string name="information">消息</string>
    <string name="home">首页</string>
    <string name="today_news">今日新闻</string>
    <string name="chief_editor">主编</string>
    <string name="automatic_offline_download">自动离线下载</string>
    <string name="routine">常规</string>
    <string name="graph_free_pattern">无图模式</string>
    <string name="big_word">大字号</string>
    <string name="others">其它</string>
    <string name="push_message">推送消息</string>
    <string name="comment_on_weibo">点评分享到微博</string>
    <string name="clear_cache">清除缓存</string>
    <string name="settings">设置</string>
    <string name="check_for_update">检查更新</string>
    <string name="feedback">反馈</string>
</resources>
