<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image_view"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/avatar"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/user_image_view"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/my_collection_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_collection"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/my_collection_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_collection"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/offline_download_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_download"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:id="@+id/offline_download_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_download"
                android:textColor="@color/white"
                android:layout_marginLeft="30dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>